# rendering

./: .gitmodules  CMakeLists.txt  LICENSE.txt  color.h  gl_context.c  gl_renderer.c  gl_renderer.h  gl_texture.c  glx_context.c  image.c  image.h  main.c  renderer.c  renderer.h  rendering.h  util.c  window.c  window.h  x11_window.c
resources/: fragment_2d.glsl  vertex_2d.glsl
